--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ header {
     height: 114px;
 }
 
+img.homeimg {
+    max-height: 100%;
+}
+
 /* nav {
     width: 50%;
 }
@@ -25,7 +29,13 @@ header {
 
 li {
     list-style: none;
-    padding: 0 74.5px;
+    padding: 16px;
+    text-align: center;
+}
+
+a.menu {
+    border: solid 1px black;
+    width: 200px;
 }
 
 /* .homeimg {
